[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-ssh-keys"
version = "0.1.1"
description = "NetBox plugin for managing SSH public keys as first-class objects"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Deovero"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/deovero/netbox-ssh-keys"
Issues = "https://github.com/deovero/netbox-ssh-keys/issues"

[tool.setuptools.packages.find]
include = ["netbox_ssh_keys*"]
